--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "antd": "^5.22.1",
+    "axios": "^1.7.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "formidable": "^3.5.2",
     "framer-motion": "^10.6.0",
+    "mongoose": "^8.8.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
