--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "developer-portfolio-starter-code",
+  "name": "parth-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.5.1",
-    "antd": "^5.22.1",
+    "@reduxjs/toolkit": "^2.3.0",
+    "antd": "^5.22.2",
     "axios": "^1.7.7",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
     "formidable": "^3.5.2",
-    "framer-motion": "^10.6.0",
-    "mongoose": "^8.8.1",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "framer-motion": "^11.11.17",
+    "mongoose": "^8.8.2",
+    "next": "15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
